--- a/ui/doorbell/pubspec.yaml
+++ b/ui/doorbell/pubspec.yaml
@@ -21,7 +21,13 @@ dependencies:
   dbus_wifi: ^0.0.6
   shared_preferences: ^2.5.3
   focus_detector: ^2.0.1
-
+  filesystem_picker: ^4.1.0
+  just_audio: ^0.10.4
+  just_audio_media_kit: any
+  media_kit_libs_windows_audio: any
+  glob: ^2.1.3
+  path: ^1.9.1
+  m3u_nullsafe: ^1.0.4
   #flutter_linux_webview: ^0.1.0
   #webview_flutter: ^3.0.4
 
