--- a/ui/doorbell/pubspec.yaml
+++ b/ui/doorbell/pubspec.yaml
@@ -28,8 +28,8 @@ dependencies:
   glob: ^2.1.3
   path: ^1.9.1
   m3u_nullsafe: ^1.0.4
-  #flutter_linux_webview: ^0.1.0
-  #webview_flutter: ^3.0.4
+  flutter_linux_webview: ^0.1.0
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
