--- a/ui/doorbell/pubspec.yaml
+++ b/ui/doorbell/pubspec.yaml
@@ -28,7 +28,11 @@ dependencies:
   glob: ^2.1.3
   path: ^1.9.1
   m3u_nullsafe: ^1.0.4
-  flutter_linux_webview: ^0.1.0
+  # flutter_linux_webview: ^0.1.0
+  flutter_linux_webview:
+    git: 
+      url: https://github.com/rosmo/flutter_linux_webview.git
+      ref: c1e8c4ef4a714ab669a8570d89db021e682a5e67
   webview_flutter: ^3.0.4
 
 dev_dependencies:
