Add some image magic

--- a/doorbell.ini
+++ b/doorbell.ini
@@ -1,3 +1,4 @@
 homeassistant_api_url = "https://homeassistant.localdomain:8123/api"
 homeassistant_api_token = "token123"
 api_token = "test123"
+api_url = "http://doorbell.localdomain"
